add venders to validator

--- a/Notebook Quick Test.ipynb
+++ b/Notebook Quick Test.ipynb
@@ -1223,23 +1223,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "0bf3bf34-6841-4781-bf14-a71bee61ebb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Adhesion\n",
+    "valid = Validator.objects.get(name=model.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1a4e8c5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "92.56"
+       "['積水', '協立', '三井']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result['value'][0]"
+    "[ i['name'] for i in valid.venders.values()]"
    ]
   }
  ],
