multi select bugs.

--- a/Notebook Quick Test.ipynb
+++ b/Notebook Quick Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "78a7cd2e",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0bf3bf34-6841-4781-bf14-a71bee61ebb3",
    "metadata": {},
    "outputs": [],
@@ -1251,6 +1251,27 @@
    ],
    "source": [
     "[ i['name'] for i in valid.venders.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8ed1522",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QuerySet [<Vender: 積水>, <Vender: 協立>, <Vender: 三井>]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid.venders.all()"
    ]
   }
  ],
