--- a/Notebook Quick Test.ipynb
+++ b/Notebook Quick Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "78a7cd2e",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0bf3bf34-6841-4781-bf14-a71bee61ebb3",
    "metadata": {},
    "outputs": [],
@@ -1234,17 +1234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "1a4e8c5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['積水', '協立', '三井']"
+       "['積水', '協立', '三井', 'Nissan', 'CMC', 'INX']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,14 +1255,511 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d8ed1522",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<QuerySet [<Vender: 積水>, <Vender: 協立>, <Vender: 三井>]>"
+       "<QuerySet [<Vender: 積水>, <Vender: 協立>, <Vender: 三井>, <Vender: Nissan>, <Vender: CMC>, <Vender: INX>]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid.venders.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5c625106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ra_exploer.views import filterQuery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f8f7e0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = {\n",
+    "    'LC': 'ALL',\n",
+    "    'PI': 'ALL',\n",
+    "    'Seal': 'ALL',\n",
+    "}\n",
+    "\n",
+    "vhr_df, vhr_mean_df = filterQuery(query, VHR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9e3b5ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stdev = vhr_mean_df['value'].std()\n",
+    "mean = vhr_mean_df['value'].mean()\n",
+    "cost = (vhr_mean_df['value'] - mean) / stdev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ac2ce22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16    1.238288\n",
+       "1     1.089082\n",
+       "3     1.087661\n",
+       "13    0.986059\n",
+       "2     0.961191\n",
+       "15    0.913232\n",
+       "18    0.816722\n",
+       "0     0.780012\n",
+       "8     0.726724\n",
+       "9     0.676989\n",
+       "4     0.659226\n",
+       "22    0.637911\n",
+       "12    0.414102\n",
+       "10    0.069506\n",
+       "7    -0.442058\n",
+       "23   -0.914544\n",
+       "21   -0.960727\n",
+       "6    -1.063751\n",
+       "20   -1.117039\n",
+       "17   -1.166774\n",
+       "5    -1.170327\n",
+       "19   -1.173879\n",
+       "14   -1.507817\n",
+       "11   -1.539790\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7ec32d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16    96.800000\n",
+       "1     92.600000\n",
+       "3     92.560000\n",
+       "13    89.700000\n",
+       "2     89.000000\n",
+       "15    87.650000\n",
+       "18    84.933333\n",
+       "0     83.900000\n",
+       "8     82.400000\n",
+       "9     81.000000\n",
+       "4     80.500000\n",
+       "22    79.900000\n",
+       "12    73.600000\n",
+       "10    63.900000\n",
+       "7     49.500000\n",
+       "23    36.200000\n",
+       "21    34.900000\n",
+       "6     32.000000\n",
+       "20    30.500000\n",
+       "17    29.100000\n",
+       "5     29.000000\n",
+       "19    28.900000\n",
+       "14    19.500000\n",
+       "11    18.600000\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vhr_mean_df['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6e377e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>LC</th>\n",
+       "      <th>PI</th>\n",
+       "      <th>Seal</th>\n",
+       "      <th>Vender</th>\n",
+       "      <th>value</th>\n",
+       "      <th>configuration</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-19-580</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>96.800000</td>\n",
+       "      <td>LCT-19-580 RB005 V386</td>\n",
+       "      <td>1.238288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>92.600000</td>\n",
+       "      <td>LCT-15-1098 RB005 7142T</td>\n",
+       "      <td>1.089082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>92.560000</td>\n",
+       "      <td>LCT-15-1098 RB005 723K1M</td>\n",
+       "      <td>1.087661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>89.700000</td>\n",
+       "      <td>LCT-17-1336 RB205 V386</td>\n",
+       "      <td>0.986059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>Merck</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>LCT-15-1098 RB005 723K1M</td>\n",
+       "      <td>0.961191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-19-580</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>87.650000</td>\n",
+       "      <td>LCT-19-580 RB005 7142T</td>\n",
+       "      <td>0.913232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>84.933333</td>\n",
+       "      <td>SLC19V33 RB005 7142T</td>\n",
+       "      <td>0.816722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>Merck</td>\n",
+       "      <td>83.900000</td>\n",
+       "      <td>LCT-15-1098 RB005 7142T</td>\n",
+       "      <td>0.780012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>82.400000</td>\n",
+       "      <td>LCT-17-1336 RB005 7142T</td>\n",
+       "      <td>0.726724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>LCT-17-1336 RB005 723K1M</td>\n",
+       "      <td>0.676989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>Merck</td>\n",
+       "      <td>80.500000</td>\n",
+       "      <td>LCT-15-1098 RB005 V386</td>\n",
+       "      <td>0.659226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>79.900000</td>\n",
+       "      <td>SLC19V33 RB205 723K1M</td>\n",
+       "      <td>0.637911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>協立</td>\n",
+       "      <td>73.600000</td>\n",
+       "      <td>LCT-17-1336 RB205 723K1M</td>\n",
+       "      <td>0.414102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>Merck</td>\n",
+       "      <td>63.900000</td>\n",
+       "      <td>LCT-17-1336 RB005 V386</td>\n",
+       "      <td>0.069506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>Merck</td>\n",
+       "      <td>49.500000</td>\n",
+       "      <td>LCT-17-1336 RB005 7142T</td>\n",
+       "      <td>-0.442058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>36.200000</td>\n",
+       "      <td>SLC19V33 RB205 V386</td>\n",
+       "      <td>-0.914544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>34.900000</td>\n",
+       "      <td>SLC19V33 RB205 723K1M</td>\n",
+       "      <td>-0.960727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>LCT-15-1098 RB205 V386</td>\n",
+       "      <td>-1.063751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>SLC19V33 RB005 V386</td>\n",
+       "      <td>-1.117039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>7142T</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>29.100000</td>\n",
+       "      <td>SLC19V33 RB005 7142T</td>\n",
+       "      <td>-1.166774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-15-1098</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>LCT-15-1098 RB205 723K1M</td>\n",
+       "      <td>-1.170327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>SLC19V33</td>\n",
+       "      <td>RB005</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>28.900000</td>\n",
+       "      <td>SLC19V33 RB005 723K1M</td>\n",
+       "      <td>-1.173879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>V386</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>19.500000</td>\n",
+       "      <td>LCT-17-1336 RB205 V386</td>\n",
+       "      <td>-1.507817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>VHR(heat)</td>\n",
+       "      <td>LCT-17-1336</td>\n",
+       "      <td>RB205</td>\n",
+       "      <td>723K1M</td>\n",
+       "      <td>三井</td>\n",
+       "      <td>18.600000</td>\n",
+       "      <td>LCT-17-1336 RB205 723K1M</td>\n",
+       "      <td>-1.539790</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         item           LC     PI    Seal  Vender      value  \\\n",
+       "16  VHR(heat)   LCT-19-580  RB005    V386  Nissan  96.800000   \n",
+       "1   VHR(heat)  LCT-15-1098  RB005   7142T      協立  92.600000   \n",
+       "3   VHR(heat)  LCT-15-1098  RB005  723K1M      協立  92.560000   \n",
+       "13  VHR(heat)  LCT-17-1336  RB205    V386  Nissan  89.700000   \n",
+       "2   VHR(heat)  LCT-15-1098  RB005  723K1M   Merck  89.000000   \n",
+       "15  VHR(heat)   LCT-19-580  RB005   7142T      協立  87.650000   \n",
+       "18  VHR(heat)     SLC19V33  RB005   7142T      協立  84.933333   \n",
+       "0   VHR(heat)  LCT-15-1098  RB005   7142T   Merck  83.900000   \n",
+       "8   VHR(heat)  LCT-17-1336  RB005   7142T      協立  82.400000   \n",
+       "9   VHR(heat)  LCT-17-1336  RB005  723K1M      協立  81.000000   \n",
+       "4   VHR(heat)  LCT-15-1098  RB005    V386   Merck  80.500000   \n",
+       "22  VHR(heat)     SLC19V33  RB205  723K1M      協立  79.900000   \n",
+       "12  VHR(heat)  LCT-17-1336  RB205  723K1M      協立  73.600000   \n",
+       "10  VHR(heat)  LCT-17-1336  RB005    V386   Merck  63.900000   \n",
+       "7   VHR(heat)  LCT-17-1336  RB005   7142T   Merck  49.500000   \n",
+       "23  VHR(heat)     SLC19V33  RB205    V386      三井  36.200000   \n",
+       "21  VHR(heat)     SLC19V33  RB205  723K1M      三井  34.900000   \n",
+       "6   VHR(heat)  LCT-15-1098  RB205    V386      三井  32.000000   \n",
+       "20  VHR(heat)     SLC19V33  RB005    V386      三井  30.500000   \n",
+       "17  VHR(heat)     SLC19V33  RB005   7142T      三井  29.100000   \n",
+       "5   VHR(heat)  LCT-15-1098  RB205  723K1M      三井  29.000000   \n",
+       "19  VHR(heat)     SLC19V33  RB005  723K1M      三井  28.900000   \n",
+       "14  VHR(heat)  LCT-17-1336  RB205    V386      三井  19.500000   \n",
+       "11  VHR(heat)  LCT-17-1336  RB205  723K1M      三井  18.600000   \n",
+       "\n",
+       "               configuration     score  \n",
+       "16     LCT-19-580 RB005 V386  1.238288  \n",
+       "1    LCT-15-1098 RB005 7142T  1.089082  \n",
+       "3   LCT-15-1098 RB005 723K1M  1.087661  \n",
+       "13    LCT-17-1336 RB205 V386  0.986059  \n",
+       "2   LCT-15-1098 RB005 723K1M  0.961191  \n",
+       "15    LCT-19-580 RB005 7142T  0.913232  \n",
+       "18      SLC19V33 RB005 7142T  0.816722  \n",
+       "0    LCT-15-1098 RB005 7142T  0.780012  \n",
+       "8    LCT-17-1336 RB005 7142T  0.726724  \n",
+       "9   LCT-17-1336 RB005 723K1M  0.676989  \n",
+       "4     LCT-15-1098 RB005 V386  0.659226  \n",
+       "22     SLC19V33 RB205 723K1M  0.637911  \n",
+       "12  LCT-17-1336 RB205 723K1M  0.414102  \n",
+       "10    LCT-17-1336 RB005 V386  0.069506  \n",
+       "7    LCT-17-1336 RB005 7142T -0.442058  \n",
+       "23       SLC19V33 RB205 V386 -0.914544  \n",
+       "21     SLC19V33 RB205 723K1M -0.960727  \n",
+       "6     LCT-15-1098 RB205 V386 -1.063751  \n",
+       "20       SLC19V33 RB005 V386 -1.117039  \n",
+       "17      SLC19V33 RB005 7142T -1.166774  \n",
+       "5   LCT-15-1098 RB205 723K1M -1.170327  \n",
+       "19     SLC19V33 RB005 723K1M -1.173879  \n",
+       "14    LCT-17-1336 RB205 V386 -1.507817  \n",
+       "11  LCT-17-1336 RB205 723K1M -1.539790  "
       ]
      },
      "execution_count": 5,
@@ -1271,8 +1768,17 @@
     }
    ],
    "source": [
-    "valid.venders.all()"
+    "vhr_mean_df.insert(0, 'item', VHR.name)\n",
+    "vhr_mean_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e3fbe4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
