--- a/Notebook Quick Test.ipynb
+++ b/Notebook Quick Test.ipynb
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5c625106",
    "metadata": {},
    "outputs": [],
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f8f7e0a8",
    "metadata": {},
    "outputs": [],
@@ -1373,47 +1373,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "7ec32d6a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16    96.800000\n",
-       "1     92.600000\n",
-       "3     92.560000\n",
-       "13    89.700000\n",
-       "2     89.000000\n",
-       "15    87.650000\n",
-       "18    84.933333\n",
-       "0     83.900000\n",
-       "8     82.400000\n",
-       "9     81.000000\n",
-       "4     80.500000\n",
-       "22    79.900000\n",
-       "12    73.600000\n",
-       "10    63.900000\n",
-       "7     49.500000\n",
-       "23    36.200000\n",
-       "21    34.900000\n",
-       "6     32.000000\n",
-       "20    30.500000\n",
-       "17    29.100000\n",
-       "5     29.000000\n",
-       "19    28.900000\n",
-       "14    19.500000\n",
-       "11    18.600000\n",
-       "Name: value, dtype: float64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'item': 'VHR(heat)', 'LC': 'LCT-19-580', 'PI': 'RB005', 'Seal': 'V386', 'Vender': 'Nissan', 'value': 96.8, 'configuration': 'LCT-19-580 RB005 V386', 'score': 1.2382884219950223}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB005', 'Seal': '7142T', 'Vender': '協立', 'value': 92.6, 'configuration': 'LCT-15-1098 RB005 7142T', 'score': 1.089082184198302}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB005', 'Seal': '723K1M', 'Vender': '協立', 'value': 92.56, 'configuration': 'LCT-15-1098 RB005 723K1M', 'score': 1.087661172409762}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB205', 'Seal': 'V386', 'Vender': 'Nissan', 'value': 89.7, 'configuration': 'LCT-17-1336 RB205 V386', 'score': 0.9860588295291384}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB005', 'Seal': '723K1M', 'Vender': 'Merck', 'value': 89.0, 'configuration': 'LCT-15-1098 RB005 723K1M', 'score': 0.9611911232296849}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-19-580', 'PI': 'RB005', 'Seal': '7142T', 'Vender': '協立', 'value': 87.65, 'configuration': 'LCT-19-580 RB005 7142T', 'score': 0.9132319753664536}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB005', 'Seal': '7142T', 'Vender': '協立', 'value': 84.93333333333334, 'configuration': 'SLC19V33 RB005 7142T', 'score': 0.8167215913947654}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB005', 'Seal': '7142T', 'Vender': 'Merck', 'value': 83.9, 'configuration': 'LCT-15-1098 RB005 7142T', 'score': 0.7800121201908106}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB005', 'Seal': '7142T', 'Vender': '協立', 'value': 82.4, 'configuration': 'LCT-17-1336 RB005 7142T', 'score': 0.7267241781205533}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB005', 'Seal': '723K1M', 'Vender': '協立', 'value': 81.0, 'configuration': 'LCT-17-1336 RB005 723K1M', 'score': 0.6769887655216463}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB005', 'Seal': 'V386', 'Vender': 'Merck', 'value': 80.5, 'configuration': 'LCT-15-1098 RB005 V386', 'score': 0.659226118164894}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB205', 'Seal': '723K1M', 'Vender': '協立', 'value': 79.9, 'configuration': 'SLC19V33 RB205 723K1M', 'score': 0.6379109413367913}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB205', 'Seal': '723K1M', 'Vender': '協立', 'value': 73.6, 'configuration': 'LCT-17-1336 RB205 723K1M', 'score': 0.41410158464171054}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB005', 'Seal': 'V386', 'Vender': 'Merck', 'value': 63.9, 'configuration': 'LCT-17-1336 RB005 V386', 'score': 0.06950622592071401}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB005', 'Seal': '7142T', 'Vender': 'Merck', 'value': 49.5, 'configuration': 'LCT-17-1336 RB005 7142T', 'score': -0.44205801795375527}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB205', 'Seal': 'V386', 'Vender': '三井', 'value': 36.2, 'configuration': 'SLC19V33 RB205 V386', 'score': -0.9145444376433691}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB205', 'Seal': '723K1M', 'Vender': '三井', 'value': 34.9, 'configuration': 'SLC19V33 RB205 723K1M', 'score': -0.9607273207709256}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB205', 'Seal': 'V386', 'Vender': '三井', 'value': 32.0, 'configuration': 'LCT-15-1098 RB205 V386', 'score': -1.0637506754400894}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB005', 'Seal': 'V386', 'Vender': '三井', 'value': 30.5, 'configuration': 'SLC19V33 RB005 V386', 'score': -1.1170386175103466}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB005', 'Seal': '7142T', 'Vender': '三井', 'value': 29.1, 'configuration': 'SLC19V33 RB005 7142T', 'score': -1.1667740301092533}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-15-1098', 'PI': 'RB205', 'Seal': '723K1M', 'Vender': '三井', 'value': 29.0, 'configuration': 'LCT-15-1098 RB205 723K1M', 'score': -1.1703265595806038}\n",
+      "{'item': 'VHR(heat)', 'LC': 'SLC19V33', 'PI': 'RB005', 'Seal': '723K1M', 'Vender': '三井', 'value': 28.9, 'configuration': 'SLC19V33 RB005 723K1M', 'score': -1.1738790890519544}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB205', 'Seal': 'V386', 'Vender': '三井', 'value': 19.5, 'configuration': 'LCT-17-1336 RB205 V386', 'score': -1.5078168593588996}\n",
+      "{'item': 'VHR(heat)', 'LC': 'LCT-17-1336', 'PI': 'RB205', 'Seal': '723K1M', 'Vender': '三井', 'value': 18.6, 'configuration': 'LCT-17-1336 RB205 723K1M', 'score': -1.5397896246010538}\n"
+     ]
     }
    ],
    "source": [
-    "vhr_mean_df['value']"
+    "for row in vhr_mean_df.to_dict(orient=\"records\"):\n",
+    "    print(row)"
    ]
   },
   {
